fix spacing for logo/title

--- a/assets/css/justified-nav.css
+++ b/assets/css/justified-nav.css
@@ -29,7 +29,7 @@
   padding-bottom: 15px;
   margin-bottom: 0;
   font-weight: bold;
-  color: #777;
+  color: white;
   text-align: center;
   background-color: rgba(255,255,255, .1);
   border-radius: .012em;
